fix: delete tags issue